ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: faas-gpoacl-create-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Faas Authentication Required"
  labels:
    app: openfaas
    component: gateway
  name: gateway-functions-faas-gpoacl-create
  namespace: "openfaas"
spec:
  rules:
  - host: openfaas.services.west.nonprod.contoso.com
    http:
      paths:
      - backend:
          serviceName: gateway
          servicePort: 8080
        path: /function/faas-gpoacl-create
  tls:
  - hosts:
    - openfaas.services.west.nonprod.contoso.com
